--- a/PlottingScripts/MakeFigures.Rmd
+++ b/PlottingScripts/MakeFigures.Rmd
@@ -80,8 +80,28 @@ facet_labeller <- function(variable,value){
 }
 
 
+#dummy plot to extract legend
+dummy <- 
+  ggplot(SigPos, 
+         aes(x = Pos, 
+             y = deviance, 
+             shape = SigPos$deviance > 40)) +
+  geom_point() +
+  scale_shape_manual(values = c(3,16),
+                     labels = c('Yes', 'No')) +
+  guides(shape = 
+           guide_legend(title = 'Suspicious',
+                        override.aes = 
+                          list(size = 8,
+                               color = c('blue',
+                                         'grey70'))))+
+  theme(legend.title = element_text(size = 20),
+        legend.text = element_text(size = 20))
+
+mylegend <- g_legend(dummy)
+
 #make manhattan plot
-GWAS <- 
+gwas <- 
   ggplot(NotSig, aes(x = Pos, 
                      y = plog10, 
                      color = as.factor(Chr))) +
@@ -102,10 +122,12 @@ GWAS <-
   scale_color_manual(values = rep(
     c("grey70", "grey30"), 
     22)) +
-  labs(y = '-log10(p)', x = 'Chromosome') +
+  labs(title = "Association of variant frequency to the average quality of mapped bases in 1kGP",
+       y = '-log10(p)', x = 'Chromosome') +
   guides(color = FALSE) + 
   theme_classic() +
-  theme(plot.title = element_text(hjust = 0.5), 
+  theme(plot.title = element_text(hjust = 0.5,
+                                  size = 20), 
         plot.subtitle = element_text(hjust = 0.5), 
         axis.text.x = element_blank(), 
         axis.ticks.x = element_blank(),
@@ -117,6 +139,11 @@ GWAS <-
         axis.title.x = element_text(size = 20,
                                   vjust = 7),
         plot.margin = unit(c(1.5,5,0,1.5), "lines"))
+
+GWAS <- plot_grid(gwas,
+                  mylegend,
+                  nrow = 1,
+                  rel_widths = c(1,0.1))
 ```
 
 
@@ -156,7 +183,7 @@ SFS <-
              aes(x = NAG_MAF, 
                  y = JPT_MAF), 
              binwidth = c(1/104, 1/104)) +
-  scale_fill_gradient(name = 'log10\ncount',
+  scale_fill_gradient(name = 'background\nvariants\nlog10\ncounts',
                       low = "grey98",
                       high = "grey30",
                       trans = "log",
@@ -169,7 +196,8 @@ SFS <-
              fill = 'royalblue1',
              color = 'black',
              shape = 21) + 
-  scale_size(breaks = c(1, 10, 100), 
+  scale_size(name = 'suspicious\nvariants\ncounts',
+             breaks = c(1, 10, 100), 
              range = c(1, 6)) +
   labs(x = "Nagahama Frequency",
        y = "1kGP Frequency") +
@@ -191,6 +219,7 @@ freq_gw <- data.frame('freq' = join$JPT_MAF,
                       'SNPs' = 'All')
 freq_sig <- data.frame('freq' = jj$JPT_MAF,
                        'SNPs' = 'Suspicious')
+
 freq_hist <- rbind(freq_sig, freq_gw)
 
 HIST <- 
@@ -198,7 +227,7 @@ HIST <-
            filter(freq > 0),
          aes(x=freq, 
              fill = SNPs))+
-  geom_histogram(binwidth = 1/104,
+  geom_histogram(bins = 100,
                  alpha=0.8, 
                  position="identity",
                  aes(y=..density..))+
@@ -207,22 +236,25 @@ HIST <-
              size = 5) +
   coord_cartesian(ylim = c(0, 18)) +
   scale_fill_manual(values=c("royalblue1", "grey30")) +
-  scale_x_continuous(limits = c(-0.01,0.5),
-                     expand = c(0.01, 0.01)) +
+  scale_x_continuous(expand = c(0.01, 0.01)) +
   scale_y_continuous(expand = c(0.01, 0.01), 
                   breaks = c(0,5,10,15,16.5,18),
                   labels = c('0','5','10','15','...','30'))+
-  labs(y="Density") +
+  labs(y="Density",
+       x = "1kGP Allele Frequency") +
   theme_classic() +
-  theme(legend.position = c(0.1, 0.8),
-        axis.line = element_blank(),
+  theme(axis.line = element_blank(),
         axis.ticks = element_blank(),
-        axis.text.y = element_blank(),
-        axis.text.x = element_text(size = 20),
-        axis.title.x = element_blank(),
-        plot.margin = unit(c(0,0,1.5,0), "lines"))
+        axis.text = element_text(size = 20),
+        axis.title = element_text(size = 20))
 
 HIST
+
+ggsave(paste0(figurePath,
+              "histogram_of_sig_snps.jpg"),
+       HIST,
+       height = 6,
+       width = 9)
 
 ```
 
@@ -428,23 +460,25 @@ d
 b <- ggplot(metaData, 
             aes(x = SUBMISSION_DATE, 
                 y = avg_qual, 
-                color = CENTER_NAME, 
-                shape = as.factor(Phase))) +
-            geom_point() + 
+                color = CENTER_NAME)) +
+            geom_point(shape = 0) + 
             geom_hline(yintercept = 30, 
                        linetype = 2, 
                        color = 'grey') +
-            scale_shape_manual(values = c(1,3),
-                               name = 'Phase') +
+            scale_color_brewer(palette = 'RdYlBu') +
             guides(color = guide_legend(title = "Sequencing\n    Center",
                                         override.aes = list(shape = 15,
                                                             size = 5))) +
-            labs(y = "Average quality of mapped bases") +
-            theme(axis.title.x = element_blank(),
-                  axis.text.x = element_blank(),
-                  axis.ticks.x = element_blank(), 
-                  axis.line.x = element_blank())
+            labs(y = "Average quality of mapped bases",
+                 x = 'Sequencing Date')
 b
+
+ggsave(paste0(figurePath,
+              "quality_by_center.jpg"),
+       b,
+       height = 9,
+       width = 9)
+
 ```
 
 #Figure 3
@@ -544,6 +578,84 @@ p3
 
 
 #Supplementary Figures
+
+## Mutation Spectrum enrichment of GCAT SNPs
+```{r,fig.height=3,fig.width=9}
+#load mutation spectrum for suspicious SNPs
+SNP <- readRDS(paste0(DataPath,
+                   'strict.gcat.SNP_Context.rds'))
+#load mutation spectrum for control SNPs
+rSNP <- readRDS(paste0(DataPath,
+                   'strict.gcat.rSNP_Context.rds'))
+
+#make color scale comparable between plots
+maxFreq <- max(SNP$Freq)
+
+plotContext <- function(data, name){
+  
+plt <- ggplot(data, 
+              aes(x = End, 
+                  y = Start, 
+                  fill = Freq)) +
+    geom_tile() +
+    facet_grid(.~Mut) +
+    labs(y = name) +
+    theme_classic() +
+    theme(axis.title.x = element_blank(),
+          axis.line = element_blank(),
+          axis.text = element_text(size = 20),
+          axis.title.y = element_text(size = 20),
+          strip.placement = "outside",
+          strip.background = element_blank(),
+          strip.text = element_text(size = 20),
+          legend.text = element_text(size = 20),
+          legend.title = element_text(size = 20),
+          panel.border = element_rect(colour = "black", 
+                                      fill = NA, 
+                                      size = 1),
+          plot.margin = unit(c(0,0,0,1.5), "lines")) +
+    scale_fill_gradient(limits = c(0, maxFreq),
+                        low = 'white', 
+                        high = 'royalblue1',
+                        guide = guide_legend(title = 'count',
+                                             direction = 'vertical'))
+return(plt)
+}
+
+SNPplt <- plotContext(SNP,'Suspicious')
+rSNPplt <- plotContext(rSNP,'Control')
+
+SNPplt <- SNPplt + 
+  geom_point(data = 
+               SNP[which(SNP$chi_p < 1e-8),], 
+             aes(x=End, y = Start), 
+             shape = '*', 
+             color = 'black',
+             size = 6)
+
+
+mylegend <- g_legend(rSNPplt)
+
+Mut_Spect <- 
+  plot_grid(
+            plot_grid(
+              SNPplt + 
+                theme(legend.position = "none"),
+              rSNPplt + 
+                theme(legend.position = "none"),
+              nrow = 2),
+            mylegend,
+            ncol = 2,
+            rel_widths = c(1,0.15))
+
+Mut_Spect
+
+
+ggsave(paste0(figurePath,
+              'strict_gcat_mutational_enrichment.jpg'),
+              height=4, 
+              width=10)
+```
 
 ##Comparig models
 ```{r,fig.height=11,fig.width=8}
