--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -107,7 +107,7 @@ Finally, we investigate how these variants have impacted modern genomics analyse
 Suspicious mutations carried by individuals with low quality data have distinct mutational profiles, reproduce poorly across studies, and are distributed across the genome. 
 \textbf{A} 
 Genome wide association of the average quality of mapped bases $Q$ for the 104 Japanese individuals included in the 1000 Genomes Project. 
-This GWAS identified $587\ \  p < 10^{-8}$ and $1034\ \ p < 10^{-6}$ SNPs that were associated to the average $Q$ of SNPs mapped for an individual
+This GWAS identified $587\ \  p < 10^{-8}$ and $1034\ \ p < 10^{-6}$ SNPs that were associated to the average $Q$ of SNPs mapped for an individual.
 The same analysis was performed independently for each of the populations in the 1000 Genomes Project.
 \textbf{B} 
 Joint frequency spectrum plot of the Japanese from the 1000 Genomes Project and a more recent Japanese dataset from Nagahama.
@@ -200,7 +200,7 @@ However, another enrichment profile is significantly enriched : TAT${\rightarrow
 \caption{Number of statistically significant variants  passing the 1000 Genomes Project strict mask per category. 
 Variants that are flagged by the 1000 Genomes Project nested repeat mask file were analyzed separately for FDR calculation. SNPs and INDELs were also analyzed separately.
 A total of 15,270 are statistically significantly associated to $Q$. 
-The grey text is the proportion of significant associations per category.
+\todo{The grey text is the proportion of significant associations per category.}
 The number of variants included in the analysis for SNPs, SNPs in repeat regions, INDELs and INDELs in repeat regions are  19,846,786, 6,312,620, 1,770,315 and 586,342 respectively.}
 \label{sigTable}
 \end{table}
@@ -402,6 +402,7 @@ The VCF file returned from the server was then downloaded and used to search for
 \section{Acknowledgments}
 We would like to thank Kelly Harris for sharing her mutation spectrum scripts.
 We would also like to thank the members of the Gravel lab for their help with coding and useful discussions.
+
 
 \bibliography{Legacy}
 
